Add correct answers style

--- a/styling.css
+++ b/styling.css
@@ -541,3 +541,12 @@ radical-combination {
 	border-radius: 3px;
 	margin: 0 10px 10px 0;
 }
+
+/* Correct Answers */
+#correct {
+	font-size: 16px;
+}
+#correct reading {
+	font-size: 20px;
+	font-family: "Hiragino Kaku Gothic Pro W3";
+}
