--- a/styling.css
+++ b/styling.css
@@ -556,3 +556,6 @@ radical-combination {
 	font-size: 20px;
 	font-family: "Hiragino Kaku Gothic Pro W3";
 }
+.mobile #correct reading {
+	font-size: 24px;
+}
