--- a/styling.css
+++ b/styling.css
@@ -153,7 +153,7 @@ vocabulary {
 
 .meaning {
 	background-color: #ddd;
-	box-shadow: 0px 1px 5px 0px var(--shadow-color);
+	/* box-shadow: 0px 1px 5px 0px var(--shadow-color); */
 	color: var(--font-color-dark);
 	line-height: 40px;
 }
