--- a/styling.css
+++ b/styling.css
@@ -397,7 +397,8 @@ radical-combination {
 	/* box-shadow: 0px 2px 3px 0px var(--shadow-color); */
 	line-height: 40px;
 	text-align: center;
-	height: 37px;
+	height: 40px;
+  overflow: hidden;
 	border: 0;
 	outline-style: none;
 	font-family: arial;
@@ -485,6 +486,7 @@ radical-combination {
 	font-smoothing: antialiased;
 }
 
+.radical-saw:before { content: "\f148"; }
 .radical-bar:before { content: "\f102"; }
 .radical-bear:before { content: "\f103"; }
 .radical-beggar:before { content: "\f104"; }
@@ -654,4 +656,16 @@ characters.correct-vocab {
 .mobile #radical-character {
     padding: 0px 15px 10px 15px;
     font-size: 58px;
+}
+
+hr {
+  border: none;
+  height: 0.5px;
+  background-color: #a9a9a9;
+  margin-top: 3px;
+}
+
+.input {
+  height: 40px;
+  overflow: hidden;
 }
